--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
