--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    /* Base Options: */
+    /* Base Options: */ 
     "esModuleInterop": true,
     "skipLibCheck": true,
     "target": "es2022",
@@ -26,7 +26,7 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "@*": ["./src/*"]
+      "@*": ["./src*"]
     }
   },
   "include": [
