--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "find_err": "NODE_OPTIONS='--trace-warnings' next dev",
     "build": "next build",
     "start": "next start",
