--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/themes": "^3.1.1",
+    "add": "^2.0.6",
+    "button": "^1.1.1",
+    "calendar": "^0.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "command": "^0.0.5",
     "framer-motion": "^11.2.10",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -30,5 +40,6 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
-  }
+  },
+  "module": "index.ts"
 }
