--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/themes": "^3.1.1",
+    "@tabler/icons-react": "^3.6.0",
     "add": "^2.0.6",
     "button": "^1.1.1",
     "calendar": "^0.1.1",
