--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
+    "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-vertical-timeline-component": "^3.6.0",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.3.0"
   },
