--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@radix-ui/themes": "^3.1.1",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.6.0",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "add": "^2.0.6",
     "button": "^1.1.1",
     "calendar": "^0.1.1",
