--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/themes": "^3.1.1",
     "@react-three/fiber": "^8.16.8",
+    "@splinetool/react-spline": "^4.0.0",
     "@tabler/icons-react": "^3.6.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
