--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/themes": "^3.1.1",
     "@react-three/fiber": "^8.16.8",
     "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.8.9",
     "@tabler/icons-react": "^3.6.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
