--- a/package.json
+++ b/package.json
@@ -12,45 +12,29 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/themes": "^3.1.1",
-    "@react-three/fiber": "^8.16.8",
-    "@splinetool/react-spline": "^4.0.0",
-    "@splinetool/runtime": "^1.8.9",
-    "@tabler/icons-react": "^3.6.0",
-    "@tsparticles/engine": "^3.5.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.12",
-    "lucide-react": "^0.396.0",
-    "next": "14.2.4",
+    "framer-motion": "^11.3.2",
+    "lucide-react": "^0.408.0",
+    "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "react-svg": "^16.1.34",
     "react-vertical-timeline-component": "^3.6.0",
-    "shadcn-ui": "^0.2.3",
-    "tailwind-merge": "^2.3.0",
-    "three": "^0.166.1"
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-vertical-timeline-component": "^3.3.6",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.10",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "prettier": "^3.3.2",
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
-  },
-  "module": "index.ts"
+  }
 }
