--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-vertical-timeline-component": "^3.6.0",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
