--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-vertical-timeline-component": "^3.6.0",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0"
   },
